--- a/content/books/Makefile
+++ b/content/books/Makefile
@@ -15,6 +15,7 @@ testv:
 cover:
 	go test -cover -coverprofile $(TMP_FILE)
 	go tool cover -html=$(TMP_FILE) -o $(COVERAGE_FILE)
+	echo "firefox $(COVERAGE_FILE) &"
 
 .PHONY: test testv cover
 
