add test coverage for kanjis with radicals

--- a/content/kanjis/Makefile
+++ b/content/kanjis/Makefile
@@ -17,5 +17,16 @@ cover:
 	go tool cover -html=$(TMP_FILE) -o $(COVERAGE_FILE)
 	echo "firefox $(COVERAGE_FILE) &"
 
-.PHONY: test testv cover
+# package list for test coverage
+PACKAGE_LIST:=github.com/jochenczemmel/gobenkyoo/content/kanjis
+PACKAGE_LIST:=$(PACKAGE_LIST),github.com/jochenczemmel/gobenkyoo/content/kanjis/radicals
+
+# run test coverage
+coverall:
+	go test -cover -coverprofile $(TMP_FILE) -coverpkg $(PACKAGE_LIST) ./...
+	# go test -cover -coverprofile $(TMP_FILE) ./...
+	go tool cover -html=$(TMP_FILE) -o $(COVERAGE_FILE)
+	echo "firefox $(COVERAGE_FILE) &"
+
+.PHONY: test testv cover coverall
 
