rewrite json storage
- store library, tests not yet complete

--- a/store/jsondb/Makefile
+++ b/store/jsondb/Makefile
@@ -1,6 +1,6 @@
 
-TMP_FILE=testcoverage.txt
-COVERAGE_FILE=testcoverage.html
+TMP_FILE=coverage.txt
+COVERAGE_FILE=coverage.html
 
 
 # run unit test
@@ -16,6 +16,8 @@ cover:
 	go test -cover -coverprofile $(TMP_FILE)
 	go tool cover -html=$(TMP_FILE) -o $(COVERAGE_FILE)
 	echo "firefox $(COVERAGE_FILE) &"
+	echo "chromium-browser $(COVERAGE_FILE) &"
+
 
 .PHONY: test testv cover
 
