add integration test for library
- store, load, compare library

--- a/store/jsondb/Makefile
+++ b/store/jsondb/Makefile
@@ -11,9 +11,13 @@ test:
 testv:
 	go test -v
 
+# run unit test
+inttest:
+	go test -tags inttest
+
 # run test coverage
 cover:
-	go test -cover -coverprofile $(TMP_FILE)
+	go test -tags inttest -cover -coverprofile $(TMP_FILE)
 	go tool cover -html=$(TMP_FILE) -o $(COVERAGE_FILE)
 	echo "firefox $(COVERAGE_FILE) &"
 	echo "chromium-browser $(COVERAGE_FILE) &"
