--- a/content/kanjis/Makefile
+++ b/content/kanjis/Makefile
@@ -14,8 +14,10 @@ testv:
 # run test coverage
 cover:
 	go test -cover -coverprofile $(TMP_FILE)
+	go tool cover -func=$(TMP_FILE)
 	go tool cover -html=$(TMP_FILE) -o $(COVERAGE_FILE)
 	echo "firefox $(COVERAGE_FILE) &"
+	echo "chromium-browser $(COVERAGE_FILE) &"
 
 # package list for test coverage
 PACKAGE_LIST:=github.com/jochenczemmel/gobenkyoo/content/kanjis
@@ -24,9 +26,9 @@ PACKAGE_LIST:=$(PACKAGE_LIST),github.com/jochenczemmel/gobenkyoo/content/kanjis/
 # run test coverage
 coverall:
 	go test -cover -coverprofile $(TMP_FILE) -coverpkg $(PACKAGE_LIST) ./...
-	# go test -cover -coverprofile $(TMP_FILE) ./...
 	go tool cover -html=$(TMP_FILE) -o $(COVERAGE_FILE)
 	echo "firefox $(COVERAGE_FILE) &"
+	echo "chromium-browser $(COVERAGE_FILE) &"
 
 .PHONY: test testv cover coverall
 
