--- a/app/learn/Makefile
+++ b/app/learn/Makefile
@@ -14,7 +14,7 @@ testv:
 # run test coverage
 cover:
 	go test -cover -coverprofile $(TMP_FILE)
-	# go tool cover -func=$(TMP_FILE)
+	go tool cover -func=$(TMP_FILE)
 	go tool cover -html=$(TMP_FILE) -o $(COVERAGE_FILE)
 	echo "firefox $(COVERAGE_FILE) &"
 	echo "chromium-browser $(COVERAGE_FILE) &"
