--- a/app/Makefile
+++ b/app/Makefile
@@ -19,5 +19,45 @@ cover:
 	echo "firefox $(COVERAGE_FILE) &"
 	echo "chromium-browser $(COVERAGE_FILE) &"
 
-.PHONY: test testv cover
+.PHONY: test testv cover maketestdata
+
+
+TESTDATA=testdata
+
+maketestdata:
+	../cmd/gobenkyoo-import/gobenkyoo-import \
+		-book "minna kyu 1" \
+		-series "minna" \
+		-volume 1 \
+		-lesson "lesson 1" \
+		-type "kanji" \
+		-file "$(TESTDATA)/kanjis1.csv" \
+		-header \
+		-sep ";" \
+		-fieldsep "/" \
+		-fields "KANJI,,,READING,MEANINGS,HINT,EXPLANATION" \
+		-configdir "$(TESTDATA)"
+	../cmd/gobenkyoo-import/gobenkyoo-import \
+		-book "minna kyu 1" \
+		-series "minna" \
+		-volume 1 \
+		-lesson "lesson 2" \
+		-type "kanji" \
+		-file "$(TESTDATA)/kanjis2.csv" \
+		-header \
+		-sep ";" \
+		-fieldsep "/" \
+		-fields "KANJI,,,READING,MEANINGS,HINT,EXPLANATION" \
+		-configdir "$(TESTDATA)"
+	../cmd/gobenkyoo-import/gobenkyoo-import \
+		-book "minna kyu 1" \
+		-series "minna" \
+		-volume 1 \
+		-lesson "lesson 1" \
+		-type "word" \
+		-file "$(TESTDATA)/words1.csv" \
+		-header \
+		-sep "," \
+		-fields "KANA,NIHONGO,ROMAJI,MEANING,HINT,EXPLANATION,DICTFORM,TEFORM,NAIFORM" \
+		-configdir "$(TESTDATA)" \
 
