--- a/cmd/gobenkyoo/Makefile
+++ b/cmd/gobenkyoo/Makefile
@@ -2,21 +2,23 @@
 BINARY_BASE_NAME=gobenkyoo
 
 # build linux binary
-build:
+linux:
 	GOOS=linux GOARCH=amd64 go build
 	strip $(BINARY_BASE_NAME)
 
 # build binaries
-build_all: build_windows build
+build: windows linux darwin darwinnew
 
 # build windows binary
-build_windows:
+windows:
 	GOOS=windows GOARCH=amd64 go build
 
-# call executable like in the system tests
-systemtest: build
-	./gobenkyoo -dbtype json -ui learn
+darwin:
+	GOOS=darwin GOARCH=amd64 go build -o $(BINARY_BASE_NAME).amd64
+
+darwinnew:
+	GOOS=darwin GOARCH=arm64 go build -o $(BINARY_BASE_NAME).arm64
 
 
-.PHONY: build_all build build_windows systemtest
+.PHONY: build linux windows darwin darwinnew
 
