refactor import code

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ cmd/gobenkyoo-import/testdata/jsondb
 cmd/gobenkyoo-learnbox/testdata/jsondb
 store/jsondb/testdata/store
 app/testdata/jsondb/classroom
+app/testdata/store
 
 # windows executables
 *.exe
